--- a/html/index.html
+++ b/html/index.html
@@ -9,10 +9,10 @@
     <header class="header-box">
         <div class="header-box1">
             <a class="a-class" href="#">Home</a>
-            <a class="a-class" href="#">Case Stubies</a>
-            <a class="a-class" href="#">Projects</a>
+            <a class="a-class" href="./caseStubies.html">Case Stubies</a>
+            <a class="a-class" href="./projects.html">Projects</a>
             <a class="a-class" href="#">Recent work</a>
-            <a class="a-class" href="#">Get In Touch</a>
+            <a class="a-class" href="./getInTouch.html">Get In Touch</a>
        
         <div class="header-box2">
             <a href="#">
@@ -137,30 +137,45 @@
 <div class="Project-1">
     <h2>Portfolio Website</h2>
     <br/>
-    <p>A personal responsive portfolio built with HTML and CSS.</p>
+    <ul>
+    <li>A personal responsive portfolio built with HTML and CSS.</li>
+    </ul>
   </div>
   <div class="Project-1">
     <h2>To Do list</h2>
     <br/>
-    <p>A simple task manager using JavaScript and local storage.</p>
-  </div>
+    <ul>
+    <li> simple task manager using JavaScript and local storage.</li>
+</ul>  
+</div>
      <div class="Project-1">
         <h2>E-commirtional</h2>
         <br/>
-        <p>A modern E-commertional website with menu and contact section.</p>
-     </div>
+        <ul>
+        <li>A modern E-commertional website with menu and contact section.</li>
+    </ul> 
+    </div>
 </div>
 
 <div class="footer-box">
 <h1>Get In Touch</h1>
-<div>
+<p>Interested in working together or have a question?</p></br>
+<p>Feel free to reach out — I’m always open to new opportunities and collaborations.</p>
+<div class="footer1">
 </form>
-<label for="email">Email</label>
+<div class="footer-boxt">
+<label class="txt" for="email">Email</label>
 <input type="email" id="email" name="user email" placeholder="Please Enter your Email"/>
- <label for="phone">Mobile</label>   
+</div>
+<div  class="footer-boxt">
+<label class="txt" for="phone">Mobile</label>   
  <input type="number" id="phone" name="user phone" placeholder="Please Enter your Phone Number"/>
-<label>Message</label>
-<textarea name="massage" rows="10" cols="10"></textarea>
+</div  class="footer-boxt">
+ <label class="txt" >Message</label>
+
+<textarea name="massage" rows="10" cols="50"></textarea>
+
+<input class="footersumit" type="submit"/>
 </form>
 </div>
     
